--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
    body {
             background-color: rgb(240, 240, 245);
         }
+
+    h1 {
+        text-align: center;
+    }
+
+    h2 {
+        text-decoration: underline;
+    }
